<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivityListOverview">
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" android:showAsAction="never" />
    <item android:id="@+id/action_backup" android:title="@string/action_backup"
        android:orderInCategory="100" android:showAsAction="never" />
    <item android:id="@+id/action_restore" android:title="@string/action_restore"
        android:orderInCategory="100" android:showAsAction="never" />
    <item android:id="@+id/action_new_list"
        android:icon="@drawable/ic_action_new_event"
        android:title="@string/action_new_list"
        android:orderInCategory="100"
        android:showAsAction="ifRoom" />
</menu>
