<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    style="@style/Background"
    tools:context="com.example.konghon.backpackapp.CreateNewItem">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editTextName"
        android:layout_toEndOf="@+id/textViewNameItemLabel"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/textViewNameItemLabel"
        style="@style/SubText"
        android:hint="@string/item_item_name_hint" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_name"
        android:id="@+id/textViewNameItemLabel"
        style="@style/SubText"
        android:layout_alignBottom="@+id/editTextName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/editTextDescription"
        android:layout_below="@+id/editTextName"
        android:layout_toEndOf="@+id/textViewDescriptionLabel"
        android:layout_alignRight="@+id/editTextName"
        android:layout_alignEnd="@+id/editTextName"
        android:layout_toRightOf="@+id/textViewDescriptionLabel"
        android:hint="@string/item_item_description_hint"
        style="@style/SubText"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_description"
        android:id="@+id/textViewDescriptionLabel"
        android:layout_alignBottom="@+id/editTextDescription"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        style="@style/SubText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_tagID"
        android:id="@+id/textViewTagIdLabel"
        android:layout_marginTop="22dp"
        android:layout_below="@+id/textViewDescriptionLabel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        style="@style/SubText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewTagId"
        android:layout_alignTop="@+id/textViewTagIdLabel"
        android:layout_alignLeft="@+id/editTextDescription"
        android:layout_alignStart="@+id/editTextDescription"
        style="@style/SubText"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_addItem"
        android:id="@+id/buttonAddItem"
        android:layout_below="@+id/textViewTagIdLabel"
        android:layout_alignLeft="@+id/textViewTagId"
        android:layout_alignStart="@+id/textViewTagId" />
</RelativeLayout>
