<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    style="@style/Background"
    tools:context="com.example.konghon.backpackapp.SettingsActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_name"
        android:id="@+id/textViewNameLabel"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        style="@style/SubText"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewName"
        style="@style/SubText"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/buttonGetJson"
        android:layout_toRightOf="@+id/buttonGetJson" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_age"
        android:id="@+id/textViewAgeLabel"
        android:layout_below="@+id/textViewNameLabel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        style="@style/SubText"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_joindate"
        android:id="@+id/textViewJoinedLabel"
        android:layout_below="@+id/textViewAgeLabel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        style="@style/SubText"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewJoined"
        android:layout_below="@+id/textViewAgeLabel"
        style="@style/SubText"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignLeft="@+id/textViewAge"
        android:layout_alignStart="@+id/textViewAge" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_about"
        android:id="@+id/textViewAboutLabel"
        android:layout_below="@+id/textViewJoinedLabel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        style="@style/SubText"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewAbout"
        android:layout_below="@+id/textViewJoined"
        style="@style/SubText"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignLeft="@+id/textViewJoined"
        android:layout_alignStart="@+id/textViewJoined" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewAge"
        style="@style/SubText"
        android:layout_above="@+id/textViewJoined"
        android:layout_below="@+id/textViewName"
        android:layout_alignLeft="@+id/textViewName"
        android:layout_alignStart="@+id/textViewName"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_button"
        android:id="@+id/buttonGetJson"
        android:layout_below="@+id/textViewAbout"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
